@@ -12,10 +12,10 @@ TODO
     - Always show quality of items
     - Scripting
     - UI
+        - Fully Movable UI
         - Chat Window
         - Additonal hotkeys
         - Keybinds
-        - Fully Movable UI
         - Separate Study Window
         - (Low Priority) Themes
     - Flowermenu as a list rather than circle
