@@ -36,7 +36,7 @@ import java.util.*;
 import java.lang.reflect.*;
 
 public class MainFrame extends java.awt.Frame implements Runnable, Console.Directory {
-    private static final String title = "Haven and Hearth \u2013 Sloth Client \u2013 1.0.5 \u2013 A New Beginning";
+    private static final String title = "Haven and Hearth \u2013 Sloth Client \u2013 1.0.6 \u2013 A New Beginning";
     HavenPanel p;
     private final ThreadGroup g;
     public final Thread mt;
